<resources>
    <string name="app_name" translatable="false">Twitter Counter</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong">Something went wrong, please try again later</string>
    <string name="twitter_character_count">Twitter character count</string>
    <string name="characters_typed">Characters Typed</string>
    <string name="characters_remaining">Characters Remaining</string>
    <string name="tweet_hint">Start typing! You can enter up to 280 characters</string>
    <string name="copy_text">Copy text</string>
    <string name="clear_text">Clear text</string>
    <string name="post_tweet">Post tweet</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_you_want_to_clear_the_text">Are you sure you want to clear the text?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="tweeted_successfully">Tweeted successfully</string>

</resources>