<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.halan.twitter_counter.ui.main.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_counter"
                android:layout_width="0dp"
                android:layout_height="@dimen/_84sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@id/mcv_remaining"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:strokeColor="@color/color_primary_light"
                app:strokeWidth="@dimen/_2sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/tv_text_semi_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_primary_light"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/characters_typed"
                        android:textAlignment="center" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_counter"
                        style="@style/tv_text_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/max_count" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_remaining"
                android:layout_width="0dp"
                android:layout_height="@dimen/_84sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mcv_counter"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:strokeColor="@color/color_primary_light"
                app:strokeWidth="@dimen/_2sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/tv_text_semi_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_primary_light"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/characters_remaining"
                        android:textAlignment="center" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_remaining"
                        style="@style/tv_text_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        tools:text="280" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_tweet"
                android:layout_width="0dp"
                android:layout_height="@dimen/_180sdp"
                android:layout_margin="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_remaining"
                app:strokeColor="@color/grey"
                app:strokeWidth="@dimen/_1sdp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_tweet"
                        style="@style/style_tweet_edit_text"
                        android:hint="@string/tweet_hint" />
                </ScrollView>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_copy_text"
                style="@style/style_green_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/copy_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_tweet" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear_text"
                style="@style/style_red_btn"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_tweet" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_post_tweet"
                style="@style/style_primary_btn"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_clear_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_post_tweet" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>